# Bits

./: CMakeLists.txt  Changes.txt  Makefile  README.md
file_lists/: benchmark_files  my_tests  source_files  test_files
src/bits/: arg_parse.cc  arg_parse.h  arg_parse.test.cc  base.h  benchmark_main.perf.cc  benchmark_util.perf.cc  benchmark_util.perf.h  bits.h  macros.h  probability_util.cc  probability_util.h  probability_util.perf.cc  probability_util.test.cc  str_util.h  str_util.test.cc  test_util.test.cc  test_util.test.h
src/bits/algebra/: matrix.cc  matrix.h  matrix_ref.h  vector.cc  vector.h  vector_ref.cc  vector_ref.h  vector_ref_test.cc  vector_test.cc
src/bits/mem/: bit_ref.cc  bit_ref.h  bit_ref.test.cc  fixed_cap_vector.h  fixed_cap_vector.test.cc  monotonic_buffer.h  monotonic_buffer.test.cc  pointer_range.h  simd_bit_table.h  simd_bit_table.inl  simd_bit_table.perf.cc  simd_bit_table.test.cc  simd_bit_table_util.cc  simd_bit_table_util.h  simd_bits.h  simd_bits.inl  simd_bits.perf.cc  simd_bits.test.cc  simd_bits_range_ref.h  simd_bits_range_ref.inl  simd_bits_range_ref.test.cc  simd_util.cc  simd_util.h  simd_util.test.cc  simd_word.cc  simd_word.h  simd_word.perf.cc  simd_word.test.cc  simd_word.test.h  simd_word_128_sse.h  simd_word_256_avx.h  simd_word_64_std.h  sparse_xor_vec.cc  sparse_xor_vec.h  sparse_xor_vec.perf.cc  sparse_xor_vec.test.cc
tests/: matrix.cc  rng.cc
